2005-11-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Makefile.am, Makefile.in: Make sure INSTALL.Windows is included
	in dist.

	* doc/babel.1: Update with recent format additions.

	* src/formats/amberformat.cpp, src/formats/balstformat.cpp,
	src/formats/smilesformat.cpp, src/formats/turbomoleformat.cpp:
	Update specification URLs.

2005-11-16  Chris Morley  <c.morley@gaseq.co.uk>
	
	* src/obconversion.cpp(Convert): m_IsLast set more definitely
	as part of solution to bug #1357957.
	(FullConvert) Extra gzip code to solve bug #1357705.
	[Windows builds are now reading gzip ok but not always writing it
	properly.]

	src/formats/fastsearchformat.cpp: Extra lines withconditional
	SetMoreFilesToCome to solve bug #1357957. [There may possibly be
	a gzip incompatibility here as well].
	
	* src/fingerprint.h, src/fingerprint.cpp, 
	src/fingerprints/finger2.cpp, src/fingerprints/finger3.cpp:
	Make bitsperint a private variable and provide a Get(). Not
	worth doing - the bug was a missing USING_DYNAMIC_LIBS in 
	the settings for OBExtraFormats project.
	
	Windows build files.  

2005-11-15  Chris Morley  <c.morley@gaseq.co.uk>
	
	* src/obconversion.cpp: remove #include <dflcn.h>

	* windows/OBGUIDlg.cpp (OnInitDialog): add dummy OBConversion
	object to load format files.

2005-11-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Makefile.am, Makefile.in: Remove non-functional b32.mak file
	from distribution.

	* NEWS, THANKS: Further updates for 2.0 release.

	* data/types.h, data/types.txt: Added PCM atom types.

	* doc/Makefile.am, doc/Makefile.in: Removed defunct Migration.html
	(from OELib).

	* doc/FAQ.html, doc/OBTwoMigration.html, scripts/python/Examples.html:
	Updated documentation (from the new website).

	* src/formats/pcmodelformat.cpp: Initial support for PCModel
	files. Possibly does not include all atom types, but does read all
	the initial files I threw at it.

	* src/formats/Makefile.am, src/formats/Makefile.in: Compile it.
